fix to reduce spacing in header and splash  elements in psychology

--- a/css/ccap-psychology.less
+++ b/css/ccap-psychology.less
@@ -237,6 +237,8 @@ h1.title,
 }
 
 .chapter h1.title {
+  // Must use font-size at this level of cascade to override precalc setting (35pt)
+  font-size: 18pt;
   .cnx-gentext-autogenerated,
   .cnx-gentext-n {
     font-size: 18pt;
@@ -367,6 +369,9 @@ div.end-of-book-solutions div.solution > div.body {
  * Introduction
  ******************************************************/
 .chapter > .introduction {
+  // Width of Introduction container must be set @100% to allow child containers (splash, etc to be 6.5in)
+  width: 100%;
+
   .toc a {
     margin: 0;
   }
@@ -382,10 +387,13 @@ div.end-of-book-solutions div.solution > div.body {
 /******************************************************
  * Chapters
  ******************************************************/
+
+// The removal of margin and padding from h1, h1.title (precalculus) to faciliate less space at top of book
+h1, h1.title { margin: 0; padding: 0; }
+
 // Reset (ccap-precalculus.less)
 div.book div.chapter > div.titlepage > div > div h1.title {
-  padding-top: 0em;
-  margin-top: 0em;
+  width: 100%;
 
   // string-set and display: none are used to get rid of the "."
   // in the chapter titles, since the class "...-autogenerated" is
@@ -397,6 +405,8 @@ div.book div.chapter > div.titlepage > div > div h1.title {
     string-set: cnx-chapter-string content();
   }
   span.cnx-gentext-n {
+    margin: 0;
+    padding: 0;
     string-set: cnx-chapter-number-string string(cnx-chapter-string) " " content();
     content: string(cnx-chapter-number-string);
   }
@@ -408,8 +418,7 @@ div.book div.chapter > div.titlepage > div > div h1.title {
     border-top-style: solid;
 
     // Spacing around border.
-    margin-top: 5px;
-    padding-top: 10px;
+    margin-top: 10px;
 
     // Replace the default page header "Chapter number | Title", removing
     // the "|"
@@ -426,7 +435,8 @@ div.figure.splash {
   padding-bottom: 1.5em;
 
   .body {
-    padding-bottom: .45em;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
